# spl_project_1

./: .gitignore  CMakeLists.txt  Makefile  README.md  check.sh  makefile  output.json  run.sh
include/: Agent.h  Graph.h  Session.h  Tree.h  json.hpp
src/: main.cpp
src/classes/: Graph.cpp  Session.cpp
src/classes/agents/: Agent.cpp  ContactTracer.cpp  Virus.cpp
src/classes/trees/: CycleTree.cpp  MaxRankTree.cpp  RootTree.cpp  Tree.cpp
tests/: Tester.cpp  Tester.h
